--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -7,18 +7,6 @@
     <data>
 
         <variable
-            name="item"
-            type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem" />
-
-        <variable
-            name="isRankEmpty"
-            type="boolean" />
-
-        <variable
-            name="isEditMode"
-            type="boolean" />
-
-        <variable
             name="historyMove"
             type="sgtmelon.scriptum.data.noteHistory.HistoryMoveAvailable" />
     </data>
@@ -37,10 +25,7 @@
         <include
             android:id="@+id/content"
             layout="@layout/inc_note_panel_content"
-            app:historyMove='@{historyMove}'
-            app:isEditMode='@{isEditMode}'
-            app:isRankEmpty='@{isRankEmpty}'
-            app:item='@{item}' />
+            app:historyMove='@{historyMove}' />
 
     </LinearLayout>
 
