--- a/app/src/main/res/layout/inc_note_panel_content.xml
+++ b/app/src/main/res/layout/inc_note_panel_content.xml
@@ -3,15 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <import type="sgtmelon.scriptum.R" />
-
-        <variable
-            name="historyMove"
-            type="sgtmelon.scriptum.data.noteHistory.HistoryMoveAvailable" />
-    </data>
-
     <FrameLayout
         android:id="@+id/parent_container"
         android:layout_width="match_parent"
@@ -25,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:visibility="invisible"
             tools:visibility="invisible">
 
             <ImageButton
@@ -55,28 +47,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            tools:visibility="invisible">
+            android:visibility="invisible"
+            tools:visibility="visible">
 
             <ImageButton
                 android:id="@+id/undo_button"
                 style="@style/Button.Small"
                 android:contentDescription="@string/description_note_undo"
-                app:boolExpression="@{historyMove.undo}"
-                app:enabled="@{historyMove.undo}"
-                app:falseColor='@{R.attr.clDisable}'
+                app:tint="?attr/clDisable"
                 app:srcCompat="@drawable/ic_undo"
-                app:trueColor='@{R.attr.clContent}'
-                tools:tint="?attr/clDisable" />
+                tools:tint="?attr/clContent" />
 
             <ImageButton
                 android:id="@+id/redo_button"
                 style="@style/Button.Small"
                 android:contentDescription="@string/description_note_redo"
-                app:boolExpression="@{historyMove.redo}"
-                app:enabled="@{historyMove.redo}"
-                app:falseColor='@{R.attr.clDisable}'
+                app:tint="?attr/clDisable"
                 app:srcCompat="@drawable/ic_redo"
-                app:trueColor='@{R.attr.clContent}'
                 tools:tint="?attr/clDisable" />
 
             <ImageButton
@@ -112,7 +99,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            tools:visibility="visible">
+            android:visibility="invisible"
+            tools:visibility="invisible">
 
             <ImageButton
                 android:id="@+id/notification_button"
@@ -122,7 +110,7 @@
                 app:tint="?attr/clContent"
                 tools:tint="?attr/clAccent" />
 
-            <!--  Set contentDescription in ui class  -->
+            <!--  Set contentDescription in UI class  -->
             <ImageButton
                 android:id="@+id/bind_button"
                 style="@style/Button.Small"
@@ -131,7 +119,7 @@
                 tools:ignore="ContentDescription"
                 tools:tint="?attr/clAccent" />
 
-            <!--  Set contentDescription in ui class  -->
+            <!--  Set contentDescription in UI class  -->
             <ImageButton
                 android:id="@+id/convert_button"
                 style="@style/Button.Small"
