--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/fragment_text_note">
-
-    <data>
-
-        <variable
-            name="historyMove"
-            type="sgtmelon.scriptum.data.noteHistory.HistoryMoveAvailable" />
-    </data>
 
     <LinearLayout
         android:id="@+id/parent_container"
@@ -24,8 +16,7 @@
 
         <include
             android:id="@+id/content"
-            layout="@layout/inc_note_panel_content"
-            app:historyMove='@{historyMove}' />
+            layout="@layout/inc_note_panel_content" />
 
     </LinearLayout>
 
