--- a/app/src/main/res/values/dimens_device.xml
+++ b/app/src/main/res/values/dimens_device.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="item_card_horizontal_margin">8dp</dimen>
-    <dimen name="item_card_vertical_margin">4dp</dimen>
-    <dimen name="item_card_elevation">2dp</dimen>
-    <dimen name="item_card_radius">8dp</dimen>
+    <dimen name="item_card_horizontal_margin">6dp</dimen>
+    <dimen name="item_card_vertical_margin">3dp</dimen>
+    <dimen name="item_card_elevation">0dp</dimen>
+    <dimen name="item_card_radius">12dp</dimen>
 
+    <dimen name="item_card_drag_elevation">4dp</dimen>
+
+    <!--  TODO может надо подправить отступы, так же как это сделал у карточки заметки?  -->
     <dimen name="text_card_margin">8dp</dimen>
-    <dimen name="text_card_elevation">2dp</dimen>
-    <dimen name="text_card_radius">8dp</dimen>
     <dimen name="text_card_text">18sp</dimen>
     <dimen name="text_card_space">8dp</dimen>
 
