--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -19,6 +19,8 @@
 
     <dimen name="toolbar_elevation">8.3dp</dimen> <!--0.3dp-->
 
+    <dimen name="color_indicator_radius">4.25dp</dimen> <!--0.25dp-->
+    <dimen name="color_indicator_border">1dp</dimen> <!--0dp-->
     <dimen name="color_vertical_size">8.5dp</dimen> <!--0.5dp-->
     <dimen name="color_vertical_shift_space">1dp</dimen> <!--1dp-->
     <dimen name="color_horizontal_size">5.5dp</dimen> <!--1.5dp-->
