--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -11,7 +11,7 @@
         tools:layout_gravity="center">
 
         <View
-            android:id="@+id/panel_divider_view"
+            android:id="@+id/divider_view"
             style="@style/Divider.Horizontal" />
 
         <include
