--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -29,8 +29,8 @@
 
     <string name="desc_notification_cancel">Cancel notification with name: %s\nWhich setup to: %s</string>
 
-    <string name="description_item_roll_check">Check item with text:</string>
-    <string name="description_item_roll_uncheck">Uncheck item with text:</string>
+    <string name="description_item_roll_check">Check item with text: %s</string>
+    <string name="description_item_roll_uncheck">Uncheck item with text: %s</string>
     <string name="description_item_roll_move">Move item with text: %s</string>
 
     <string name="description_item_color">Select %s color</string>
