--- a/app/src/main/res/values-ru/strings_description.xml
+++ b/app/src/main/res/values-ru/strings_description.xml
@@ -27,8 +27,8 @@
 
     <string name="desc_notification_cancel">Убрать уведомление с именем: %s\nКоторое установлено на: %s</string>
 
-    <string name="description_item_roll_check">Отметить пункт с тектом:</string>
-    <string name="description_item_roll_uncheck">Снать отметку пункта с тектом:</string>
+    <string name="description_item_roll_check">Отметить пункт с тектом: %s</string>
+    <string name="description_item_roll_uncheck">Снать отметку пункта с тектом: %s</string>
     <string name="description_item_roll_move">Переместить пункт с тектом: %s</string>
 
     <string name="description_item_color">Выбрать %s цвет</string>
