--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -21,8 +21,8 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 app:cardBackgroundColor="?attr/clBackgroundEnter"
-                app:cardCornerRadius="@dimen/radius_8dp"
-                app:cardElevation="@dimen/elevation_2dp"
+                app:cardCornerRadius="@dimen/item_card_radius"
+                app:cardElevation="@dimen/elevation_0dp"
                 app:cardUseCompatPadding="false">
 
                 <LinearLayout
