Remove calling of callback for animate visible icon in RollNoteFragmentImpl.kt

--- a/app/src/main/res/menu/fragment_roll_note.xml
+++ b/app/src/main/res/menu/fragment_roll_note.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item android:id="@+id/item_visible"
         android:icon="@drawable/ic_visible_enter"
         android:title="@string/menu_roll_visible"
         android:enabled="false"
+        android:visible="false"
+        tools:visible="true"
         app:showAsAction="always" />
 
 </menu>
