--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -6,9 +6,6 @@
 
     <integer name="color_column_count">4</integer>
 
-    <integer name="note_open_time">300</integer>
-    <integer name="note_change_time">200</integer>
-
     <integer name="fragment_fade_time">200</integer>
     <integer name="fab_change_time">200</integer>
     <integer name="color_fade_time">300</integer>
@@ -18,6 +15,7 @@
     <integer name="gradient_exit_time">1500</integer>
     <integer name="gradient_state_time">1500</integer>
 
+    <!--  TODO #Remove  -->
     <integer name="recycler_enter_time">250</integer>
 
     <integer name="placeholder_fade_time">500</integer>
@@ -26,4 +24,6 @@
 
     <integer name="alarm_show_delay">500</integer>
     <integer name="alarm_show_time">500</integer>
+
+    <integer name="note_panel_change_time">100</integer>
 </resources>
