--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -33,11 +33,7 @@
                 app:icon='@{R.mipmap.img_info_rank}'
                 app:title='@{R.string.info_rank_empty_title}' />
 
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+            <ProgressBar style="@style/ProgressBar.Center" />
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:id="@+id/recycler_container"
