--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -478,9 +478,7 @@
 
     <!--  Other  -->
 
-    <style name="ProgressBar">
-        <item name="android:id">@id/progress_bar</item>
-    </style>
+    <style name="ProgressBar"/>
 
     <style name="ProgressBar.Center">
         <item name="android:layout_width">wrap_content</item>
