--- a/app/src/main/res/values/strings_info.xml
+++ b/app/src/main/res/values/strings_info.xml
@@ -7,7 +7,7 @@
     <string name="info_bin_empty_title">Bin is empty</string>
     <string name="info_notification_empty_title">No notifications</string>
     <string name="info_roll_hide_title">All items are done!</string>
-    <string name="info_roll_empty_title">You have not created items</string>
+    <string name="info_roll_empty_title">You don\'t have items</string>
     <string name="info_print_empty_title" translatable="false">Sorry!</string>
 
     <string name="info_rank_empty_details">You can create category using field above</string>
