--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -28,8 +28,11 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
-                app:icon='@{R.mipmap.img_info_notes}' />
+                android:visibility="gone"
+                app:icon='@{R.mipmap.img_info_notes}'
+                tools:visibility="visible" />
 
+            <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="@style/ProgressBar.Center" />
@@ -39,7 +42,7 @@
                 style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible"
+                android:visibility="gone"
                 tools:visibility="visible"
                 tools:itemCount="3"
                 tools:listitem="@layout/item_note_roll" />
