--- a/app/src/main/res/layout/activity_develop_print.xml
+++ b/app/src/main/res/layout/activity_develop_print.xml
@@ -26,9 +26,12 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
+                android:visibility="gone"
                 app:details='@{R.string.info_print_empty_details}'
-                app:title='@{R.string.info_print_empty_title}' />
+                app:title='@{R.string.info_print_empty_title}'
+                tools:visibility="visible" />
 
+            <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="@style/ProgressBar.Center" />
@@ -38,7 +41,7 @@
                 style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="3"
                 tools:visibility="visible" />
