--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -29,14 +29,18 @@
             <include
                 android:id="@+id/empty_info"
                 layout="@layout/inc_info"
+                android:visibility="gone"
                 app:details='@{R.string.info_rank_empty_details}'
                 app:icon='@{R.mipmap.img_info_rank}'
-                app:title='@{R.string.info_rank_empty_title}' />
+                app:title='@{R.string.info_rank_empty_title}'
+                tools:visibility="visible" />
 
+            <!--  Make only progress visible on screen clean-open.  -->
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="@style/ProgressBar.Center" />
 
+            <!--  Parent container needed for snackbar show.  -->
             <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:id="@+id/recycler_container"
                 android:layout_width="match_parent"
@@ -47,7 +51,7 @@
                     style="@style/RecyclerView.Normal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     tools:itemCount="3"
                     tools:listitem="@layout/item_rank"
                     tools:visibility="visible" />
